static/style.css
	body {
		margin: 2%;
		font-family: chalkduster;
		font-size: 20px;
	}
	header{
		background-image: url("Flag.png");
		background-size: contain;
		color: blue;
	}
	header .title{
		font-weight: bold;
		font-size: 55px;
		color: white;
	}
	h2{
		font-weight: bold;
	}
	h3{
		font-weight: bold;
		font-size: 30px;
	}
	h4{
		font-weight: bold;
		font-size: 25px;
	}

	#navigation1 .navigation-1, #navigation2 .navigation-2, #navigation3 .navigation-3, #navigation4 .navigation-4{
		background-color: pink;
		color: #FFFF00;
		font-family: "marker felt";
		font-weight: bold;
		text-transform: uppercase;
	}
	.facts{
		border: black 3px dash;
	}

	footer a{
		display: block;
		text-align: center;
		border: 3px solid black;
		margin: 3px;
		border-radius: 30px;
		background-color: white;
		margin: 0 auto;
		margin-bottom: 3px;
		margin-top: 3px;
		width: 80%;
	}
	#top{
		font-weight: bold;
		color: #000000;
		border: none;
		background-color: transparent;
		display:block;
		text-align:center;
	}	

	.carousel-inner > .item > img,
  	.carousel-inner > .item > a > img {
    	width: 70%;
    	margin: auto;
	 }
	iframe{
		border: 0px;
	}



@media only screen and (min-width: 400px){
	body{
		background-color: 	#7fc9b1;
		color: #082020;
	}
	body img{
		width: 75%;
		padding: 2%;
	}
}

@media all and (min-width: 800px){
	body{
		background-color: #7fc9b1;
	}
	footer a{
		display: inline-block;
		margin: 0 auto;
		width: 40%;
	}
}

@media all and (min-width: 1100px){
	body{
		background-color: #46895b;
		color: #1f1f87;
		background-image: url("CO.jpg");
		background-size: 100% 100%;
		background-repeat: no-repeat;

	}
	/*magnifying pictures on home page*/
	.grow {
	 	transition: all .2s ease-in-out; 
	 	cursor: pointer; 
	 	cursor: hand; 
	 	cursor: zoom-in;
	}
	.grow:hover { 
		transform: scale(1.3); 
		overflow: auto;
		width: 100%;
	}
	.growing {
		cursor: pointer; 
	 	cursor: hand; 
	 	cursor: zoom-in;
	 	transition: all .2s ease-in-out; 
	}
	.growing:hover { 
		transform: scale(1.2); 
		overflow: auto;
		max-width: 1500px;  // or width instead of max-width
  		max-height: 1500px; // or height instead of max-height
		width: 100%;
	}
	footer a{
		display: inline-block;
		width: 30%;
	}
	

	figure { 
	  display: block; 
	  position: relative; 
	  overflow: hidden; 
	}
	figcaption { 
	  position: absolute; 
	  background: rgba(0,0,0,0.75); 
	  color: white; 
	  padding: 10px 20px; 
	}
	figcaption { 
	  position: absolute; 
	  background: rgba(0,0,0,0.75); 
	  color: white; 
	  padding: 10px 20px; 

	  opacity: 0;
	  bottom: 0; 
	  left: -30%;
	  -webkit-transition: all 0.6s ease;
	  -moz-transition:    all 0.6s ease;
	  -o-transition:      all 0.6s ease;
	}

	figure:hover figcaption {
	  opacity: 1;
	  left: 0;
	}

	body img{
		width: 60%;
		padding: 6%;
	}
}

